Gally with flex-box

--- a/block-BHaabk/index.html
+++ b/block-BHaabk/index.html
@@ -11,3 +11,79 @@
 
 7. Use flexbox properties and values to create columns.
  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/stylesheet/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3ea1c7a5a1.js" crossorigin="anonymous"></script>
+    <title>Flex-Box</title>
+</head>
+<body>
+    <header>
+        <div class="header">
+            <div class="brand">
+                Photo Brand
+            </div>
+            <nav class="nav">
+                <a href="#">home</a>
+                <a href="#">about</a>
+                <a href="#">contact</a>
+            </nav>
+        </div>       
+    </header>
+    <main>
+        <div class="container">
+            <section>
+                <div class="artical">
+                    <h2>
+                        Photobomb
+                    </h2>
+                </div>
+                <div class="fix">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla sunt commodi nisi. Unde sed provident in minima aliquid asperiores adipisci voluptatem incidunt. Odit, non nihil architecto quae illum similique magni!
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam ipsum atque id tempora quas ipsa quibusdam totam quasi, consectetur quaerat aut eveniet voluptatibus. Perspiciatis dolorem debitis sit, totam nostrum quam.
+                    </p>                    
+                    <div >
+                        <img class="img" src="assets/media/vinzo-unsplash.jpg" alt="">
+                    </div>  
+                </div>       
+            </section>
+            <section>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/connor-unsplash.jpg" alt="pic1">
+                </div>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/david-unsplash.jpg" alt="pic2">
+                </div>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/garin-unsplash.jpg" alt="pic3">
+                </div>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/joseph-unsplash.jpg" alt="pic1">
+                </div>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/kit-unsplash.jpg" alt="pic2">
+                </div>
+                <div class="gallary">
+                    <img class="gal" src="assets/media/les-unsplash.jpg" alt="pic3">
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="footer">
+            <nav class="nav">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin"></i>
+            </nav>
+        </div>                        
+    </footer>    
+</body>
+</html>
