flex Assinment1-BLOG incomplete

--- a/block-BHaabo/index.html
+++ b/block-BHaabo/index.html
@@ -6,3 +6,94 @@
 - Using CSS resets is necessary.
 - Use semantic tags and keep the nesting and indentation proper. 
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/stylesheet/style.css">
+    <script src="https://kit.fontawesome.com/3ea1c7a5a1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
+    <title>Dashboard</title>
+</head>
+<body >
+    <header class="header">
+        <div class="container">
+            <div>
+                <img class="logo" src="assets/media/altcampus-logo.svg" alt="">
+            </div>
+            <div>
+                <div>
+                    <img src="assets/media/icons/bell.svg" alt="">
+                </div>                                
+                <div>
+                    <h3>Sara Jhon</h3>
+                    <img src="assets/media/icons/user.svg" alt="">
+                </div>                
+            </div>
+        </div>        
+    </header>
+    <main class="container flex">
+        <section class="section">
+            <div class="side-bar">
+                <div>
+                    <div>
+                        <img class="box" src="assets/media/icons/dashboard.svg" alt="">
+                        <span>dashboard</span>
+                    </div>
+                    <div class="active">
+                        <img class="box" src="assets/media/icons/article.svg" alt="">
+                        <span>article</span>
+                    </div>
+                    <div>
+                        <img class="box" src="assets/media/icons/analytics.svg" alt="">
+                        <span>analytics</span>
+                    </div>
+                    <div>
+                        <img class="box" src="assets/media/icons/inbox.svg" alt="">
+                        <span>inbox</span>
+                    </div>
+                    <div>
+                        <img class="box" src="assets/media/icons/setting.svg" alt="">
+                        <span>setting</span>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img class="box"src="assets/media/icons/log-out.svg" alt="">
+                        <span>log-out</span>
+                    </div>                                                                                      
+                </div>                
+            </div>            
+        </section>
+        <section>
+            <article class="artical">
+                <div >
+                    <img class="artical-img" src="assets/media/01.png" alt="o1">
+                </div>
+                <div class="artical-text">
+                    <h2>Kamet consectetur</h2>
+                    <p>
+                        Lorem ipsum dolor,Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quasi excepturi unde ratione vel totam. Fugit architecto ipsam iusto perspiciatis incidunt iste exercitationem maxime excepturi? Sit obcaecati quos hic aperiam.
+                        sit amet consectetur adipisicing elit. Asperiores, consequuntur voluptate! Nulla pariatur suscipit maxime animi harum, tenetur a nisi quibusdam. Laudantium blanditiis vero nam ipsam totam, cumque commodi repudiandae.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga labore aspernatur corporis. Voluptatem, eaque, commodi nisi itaque debitis illum, repudiandae asperiores eius repellendus modi veniam recusandae dicta perspiciatis soluta deserunt!
+                    </p>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div>
+                <small>&copy;AltCampus</small>
+            </div>
+            <div>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+            </div>
+        </div>        
+    </footer>    
+</body>
+</html>
