flex Assinment1-BLOG

--- a/block-BHaabo/index.html
+++ b/block-BHaabo/index.html
@@ -20,19 +20,19 @@
 </head>
 <body >
     <header class="header">
-        <div class="container">
-            <div>
-                <img class="logo" src="assets/media/altcampus-logo.svg" alt="">
-            </div>
-            <div>
-                <div>
-                    <img src="assets/media/icons/bell.svg" alt="">
-                </div>                                
-                <div>
-                    <h3>Sara Jhon</h3>
-                    <img src="assets/media/icons/user.svg" alt="">
-                </div>                
-            </div>
+        <div class="container flex">            
+                <a href="#">
+                    <img class="logo" src="assets/media/altcampus-logo.svg" alt="">
+                </a>
+                <nav>                  
+                    <a href="#">
+                        <img src="assets/media/icons/bell.svg" alt="">
+                    </a>                                
+                    <a href="#">
+                        <h3>Sara Jhon</h3>
+                        <img src="assets/media/icons/user.svg" alt="">
+                    </a>                
+                </nav>      
         </div>        
     </header>
     <main class="container flex">
@@ -61,14 +61,14 @@
                     </div>
                 </div>
                 <div>
-                    <div>
+                    <div class="log">
                         <img class="box"src="assets/media/icons/log-out.svg" alt="">
                         <span>log-out</span>
                     </div>                                                                                      
                 </div>                
             </div>            
         </section>
-        <section>
+        <section class="section1">
             <article class="artical">
                 <div >
                     <img class="artical-img" src="assets/media/01.png" alt="o1">
@@ -76,23 +76,24 @@
                 <div class="artical-text">
                     <h2>Kamet consectetur</h2>
                     <p>
-                        Lorem ipsum dolor,Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quasi excepturi unde ratione vel totam. Fugit architecto ipsam iusto perspiciatis incidunt iste exercitationem maxime excepturi? Sit obcaecati quos hic aperiam.
-                        sit amet consectetur adipisicing elit. Asperiores, consequuntur voluptate! Nulla pariatur suscipit maxime animi harum, tenetur a nisi quibusdam. Laudantium blanditiis vero nam ipsam totam, cumque commodi repudiandae.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga labore aspernatur corporis. Voluptatem, eaque, commodi nisi itaque debitis illum, repudiandae asperiores eius repellendus modi veniam recusandae dicta perspiciatis soluta deserunt!
+                        Lorem ipsum dolor,Lorem ipsum dolor sit amet consectetur adipisicing elit. Kharum, tenetur a nisi quibusdam. Laudantium blanditiis vero nam ipsam totam, veniam recusandae dicta perspiciatis soluta deserunt!
                     </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque enim rem earum sed officiis debitis perferendis ut facilis explicabo eaque! Id veritatis iste fuga, rem obcaecati beatae ducimus culpa cum?
+                        sit voluptas,  vel amet nisi at voluptate perferendis accusantium sed. Excepturi?
+                    </p>
+                    <div class="btn">Read More</div>
                 </div>
             </article>
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <div>
-                <small>&copy;AltCampus</small>
-            </div>
-            <div>
+        <div class="container flex">
+            <small>&copy;AltCampus</small>
+            <nav>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-twitter"></i>
-            </div>
+            </nav>
         </div>        
     </footer>    
 </body>
